--- a/android/robot/src/main/res/xml/root_preferences.xml
+++ b/android/robot/src/main/res/xml/root_preferences.xml
@@ -43,4 +43,14 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory>
+
+        <Preference
+            app:key="@string/privacy_policy"
+            app:summary="Tap here to read the privacy policy"
+            app:title="Privacy Policy"/>
+
+    </PreferenceCategory>
+
+
 </PreferenceScreen>
